2010-03-19 Jesse Kornblum

	* Added 'extern "C"' definitions to fuzzy.h for C++ compatibility
	
	* Added return values indicating errors to API functions.

	* Modified sample program to use errors on return values
	
	* Added Doxygen documentation for API function.

	* Added inttypes.h include to fuzzy.h.

	* Added error checking for NULL strings in API functions.

	* Version bump to 2.5
	

2010-02-24 Jesse Kornblum

	* Experimenting with mode to compare unknown hashes to known
	  without comparing the unknown against each other.

	* Version bump to 2.4
	

2009-01-20 Jesse Kornblum

	* Added -a mode to display all matches regardless of score.
	

2009-10-11 Jesse Kornblum

	* Fixed typo in usage page.
	

2009-07-14 Jesse Kornblum

	* Fixed bug that prevented -x mode from working on Win32

	* Added web pages to trunk. Updated quickstart guide with 
	  automatic installation options and -x mode.

	* Version bump to 2.2 and updated man page, NEWS
	

2009-07-11 Jesse Kornblum

	* Cleaned up -x mode to compare two (or more) files of
	  signatures. 

	* Cleaned up some code comments and Remove Before Flight tags

	
2009-04-18 Jesse Kornblum 

	* Experimenting with -x mode to compare two (or more)
	  files of signatures

	* Added some parameter validation code

	
2009-01-01 Jesse Kornblum 

	* Added fuzzy_hash_filename function to hash a file given
	  its filename. This avoids issues passing FILE * structures
	  on Win32 systems in programs not using the fopen convention.
	  See feature request 2142005.

	* Reconfigured all files using latest autoconf tools
	

2008-09-23 Jesse Kornblum 

	* Reinstated the code to call match_pretty() at the end of
	  main. This lets the -p and -d modes to display output and
	  fixes bug 2124423.

	* Version bump to 2.1.

	
2008-04-06 Jesse Kornblum 

	* Updated man page to include -t and -c modes.


2008-03-04 Jesse Kornblum 

	* Made b64 variable static in fuzzy.c
	

2008-02-29 Jesse Kornblum 

	* Version bump to 2.0, reconfigured.

