@@ -24,7 +24,7 @@
   <tr><td class="indexkey"><a class="el" href="fuzzy_8h.html">fuzzy.h</a> <a href="fuzzy_8h-source.html">[code]</a></td><td class="indexvalue">These functions allow a programmer to compute the fuzzy hashes (also called the context-triggered piecewise hashes) of <a class="el" href="fuzzy_8h.html#e09a019e2b342abde2325e9a92b1d660">a buffer of text </a>, <a class="el" href="fuzzy_8h.html#04749a87d07fc03d0d5eea1302c35585">the contents of a file on the disk </a>, and <a class="el" href="fuzzy_8h.html#4d60c9cc7dda2e5dc6cf8219f71db71a">the contents of an open file handle </a> . There is also a function to <a class="el" href="fuzzy_8h.html#b0b810944cf382d2de78e5dee8f2e436">compute the similarity between any two fuzzy signatures </a> </td></tr>
 </table>
 </div>
-<hr size="1"><address style="text-align: right;"><small>Generated on Fri Mar 19 11:09:38 2010 for Fuzzy Hashing API by&nbsp;
+<hr size="1"><address style="text-align: right;"><small>Generated on Sat Mar 20 18:25:53 2010 for Fuzzy Hashing API by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.6 </small></address>
 </body>
