@@ -15,7 +15,7 @@
 <h1>fuzzy.h</h1><a href="fuzzy_8h.html">Go to the documentation of this file.</a><div class="fragment"><pre class="fragment"><a name="l00001"></a>00001 <span class="comment">// Fuzzy Hashing by Jesse Kornblum</span>
 <a name="l00002"></a>00002 <span class="comment">// Copyright (C) ManTech International Corporation 2010</span>
 <a name="l00003"></a>00003 <span class="comment">//</span>
-<a name="l00004"></a>00004 <span class="comment">// $Id: fuzzy.h 96 2010-03-19 12:51:16Z jessekornblum $ </span>
+<a name="l00004"></a>00004 <span class="comment">// $Id: fuzzy.h 97 2010-03-19 15:10:06Z jessekornblum $ </span>
 <a name="l00005"></a>00005 
 <a name="l00020"></a>00020 
 <a name="l00034"></a>00034 
@@ -29,8 +29,8 @@
 <a name="l00042"></a>00042 <span class="preprocessor"></span>
 <a name="l00043"></a>00043 <span class="preprocessor">#ifndef _FUZZY_H_</span>
 <a name="l00044"></a>00044 <span class="preprocessor"></span><span class="preprocessor"># define _FUZZY_H_</span>
-<a name="l00045"></a>00045 <span class="preprocessor"></span><span class="preprocessor">#endif</span>
-<a name="l00046"></a>00046 <span class="preprocessor"></span>
+<a name="l00045"></a>00045 <span class="preprocessor"></span>
+<a name="l00046"></a>00046 
 <a name="l00057"></a>00057 <span class="keyword">extern</span> <span class="keywordtype">int</span> fuzzy_hash_buf(<span class="keyword">const</span> <span class="keywordtype">unsigned</span> <span class="keywordtype">char</span> *buf,
 <a name="l00058"></a>00058                           uint32_t      buf_len,
 <a name="l00059"></a>00059                           <span class="keywordtype">char</span>          *result);
@@ -57,8 +57,11 @@
 <a name="l00110"></a>00110 <span class="preprocessor">#ifdef __cplusplus</span>
 <a name="l00111"></a>00111 <span class="preprocessor"></span>} 
 <a name="l00112"></a>00112 <span class="preprocessor">#endif</span>
+<a name="l00113"></a>00113 <span class="preprocessor"></span>
+<a name="l00114"></a>00114 
+<a name="l00115"></a>00115 <span class="preprocessor">#endif   // ifndef _FUZZY_H_</span>
 </pre></div></div>
-<hr size="1"><address style="text-align: right;"><small>Generated on Fri Mar 19 11:09:38 2010 for Fuzzy Hashing API by&nbsp;
+<hr size="1"><address style="text-align: right;"><small>Generated on Sat Mar 20 18:25:53 2010 for Fuzzy Hashing API by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.6 </small></address>
 </body>
