@@ -44,7 +44,7 @@ Here is a list of all documented file members with links to the documentation:
 : <a class="el" href="fuzzy_8h.html#137a76507c72a195455009b62e28c671">fuzzy.h</a>
 </ul>
 </div>
-<hr size="1"><address style="text-align: right;"><small>Generated on Fri Mar 19 11:09:38 2010 for Fuzzy Hashing API by&nbsp;
+<hr size="1"><address style="text-align: right;"><small>Generated on Sat Mar 20 18:25:53 2010 for Fuzzy Hashing API by&nbsp;
 <a href="http://www.doxygen.org/index.html">
 <img src="doxygen.png" alt="doxygen" align="middle" border="0"></a> 1.5.6 </small></address>
 </body>
